--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=f4c68a7e87993cc8e94b00581d5a97d5
 DATABASE_URL="mysql://root:dexter1310@127.0.0.1:3306/the_circle?serverVersion=5.7"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
