--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
         "symfony/http-client": "5.3.*",
+        "symfony/http-foundation": "5.3.*",
         "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mime": "5.3.*",
@@ -32,6 +33,7 @@
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
+        "symfony/routing": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/serializer": "5.3.*",
