--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,9 @@ security:
                 class: App\Entity\User
                 property: username
     firewalls:
+        js_router:
+            pattern: ^/(js\/routing)
+            security: false
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
