--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,6 @@
 app_logout:
   path: /logout
   methods: GET
+
+fos_js_routing:
+  resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
